@@ -17,7 +17,6 @@
 package org.operaton.bpm.engine.rest;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -63,6 +62,7 @@ import org.operaton.bpm.engine.variable.value.ObjectValue;
 import static org.operaton.bpm.engine.rest.util.DateTimeUtils.DATE_FORMAT_WITH_TIMEZONE;
 import static io.restassured.RestAssured.given;
 import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.util.Collections.emptyMap;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.nullValue;
@@ -1398,7 +1398,7 @@ public class CaseExecutionRestServiceInteractionTest extends AbstractRestService
     // given
     String variableKey = "aVariableId";
 
-    List<String> payload = Arrays.asList("a", "b");
+    List<String> payload = List.of("a", "b");
     ObjectValue variableValue =
         MockObjectValue
             .fromObjectValue(Variables
@@ -1778,7 +1778,7 @@ public class CaseExecutionRestServiceInteractionTest extends AbstractRestService
 
     verify(caseServiceMock).withCaseExecution(MockProvider.EXAMPLE_CASE_EXECUTION_ID);
     verify(caseExecutionCommandBuilderMock).removeVariablesLocal(null);
-    verify(caseExecutionCommandBuilderMock).setVariablesLocal(null);
+    verify(caseExecutionCommandBuilderMock).setVariablesLocal(emptyMap());
     verify(caseExecutionCommandBuilderMock).execute();
   }
 
@@ -1796,7 +1796,7 @@ public class CaseExecutionRestServiceInteractionTest extends AbstractRestService
 
     verify(caseServiceMock).withCaseExecution(MockProvider.EXAMPLE_CASE_EXECUTION_ID);
     verify(caseExecutionCommandBuilderMock).removeVariables(null);
-    verify(caseExecutionCommandBuilderMock).setVariables(null);
+    verify(caseExecutionCommandBuilderMock).setVariables(emptyMap());
     verify(caseExecutionCommandBuilderMock).execute();
   }
 
@@ -1882,7 +1882,7 @@ public class CaseExecutionRestServiceInteractionTest extends AbstractRestService
     // given
     String variableKey = "aVariableId";
 
-    List<String> payload = Arrays.asList("a", "b");
+    List<String> payload = List.of("a", "b");
     ObjectValue variableValue =
         MockObjectValue
             .fromObjectValue(Variables
