@@ -15,8 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.engine.rest;
-
 import java.util.*;
+import java.util.List;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response.Status;
 
@@ -119,7 +119,7 @@ public class TaskVariableRestResourceInteractionTest extends
     // given
     String variableKey = "aVariableId";
 
-    List<String> payload = Arrays.asList("a", "b");
+    List<String> payload = List.of("a", "b");
     ObjectValue variableValue =
         MockObjectValue
             .fromObjectValue(Variables
@@ -177,13 +177,13 @@ public class TaskVariableRestResourceInteractionTest extends
 
   @Test
   void testGetVariablesForNonExistingTaskId() {
-    when(taskServiceMock.getVariablesTyped(NON_EXISTING_ID, true)).thenThrow(new ProcessEngineException("task " + NON_EXISTING_ID + " doesn't exist"));
+    when(taskServiceMock.getVariablesTyped(NON_EXISTING_ID, true)).thenThrow(new ProcessEngineException("task %s doesn't exist".formatted(NON_EXISTING_ID)));
 
     given().pathParam("id", NON_EXISTING_ID)
       .header("accept", MediaType.APPLICATION_JSON)
       .then().expect().statusCode(Status.INTERNAL_SERVER_ERROR.getStatusCode()).contentType(ContentType.JSON)
       .body("type", equalTo(ProcessEngineException.class.getSimpleName()))
-      .body("message", equalTo("task " + NON_EXISTING_ID + " doesn't exist"))
+      .body("message", equalTo("task %s doesn't exist".formatted(NON_EXISTING_ID)))
       .when().get(SINGLE_TASK_VARIABLES_URL);
   }
 
@@ -246,7 +246,7 @@ public class TaskVariableRestResourceInteractionTest extends
       .header("accept", MediaType.APPLICATION_JSON)
       .then().expect().statusCode(Status.INTERNAL_SERVER_ERROR.getStatusCode()).contentType(ContentType.JSON)
       .body("type", equalTo(RestException.class.getSimpleName()))
-      .body("message", equalTo("Cannot modify variables for task " + NON_EXISTING_ID + ": Cannot find task with id " + NON_EXISTING_ID))
+      .body("message", equalTo("Cannot modify variables for task %s: Cannot find task with id %s".formatted(NON_EXISTING_ID, NON_EXISTING_ID)))
       .when().post(SINGLE_TASK_MODIFY_VARIABLES_URL);
   }
 
@@ -384,7 +384,7 @@ public class TaskVariableRestResourceInteractionTest extends
     // given
     String variableKey = "aVariableId";
 
-    List<String> payload = Arrays.asList("a", "b");
+    List<String> payload = List.of("a", "b");
     ObjectValue variableValue =
         MockObjectValue
             .fromObjectValue(Variables
@@ -449,7 +449,7 @@ public class TaskVariableRestResourceInteractionTest extends
       .header("accept", MediaType.APPLICATION_JSON)
       .then().expect().statusCode(Status.NOT_FOUND.getStatusCode())
       .body("type", is(InvalidRequestException.class.getSimpleName()))
-      .body("message", is("task variable with name " + variableKey + " does not exist"))
+      .body("message", is("task variable with name %s does not exist".formatted(variableKey)))
       .when().get(SINGLE_TASK_SINGLE_VARIABLE_URL);
   }
 
@@ -458,13 +458,13 @@ public class TaskVariableRestResourceInteractionTest extends
     String variableKey = "aVariableKey";
 
     when(taskServiceMock.getVariableTyped(eq(NON_EXISTING_ID), eq(variableKey), anyBoolean()))
-      .thenThrow(new ProcessEngineException("task " + NON_EXISTING_ID + " doesn't exist"));
+      .thenThrow(new ProcessEngineException("task %s doesn't exist".formatted(NON_EXISTING_ID)));
 
     given().pathParam("id", NON_EXISTING_ID).pathParam("varId", variableKey)
       .header("accept", MediaType.APPLICATION_JSON)
       .then().expect().statusCode(Status.INTERNAL_SERVER_ERROR.getStatusCode())
       .body("type", is(RestException.class.getSimpleName()))
-      .body("message", is("Cannot get task variable " + variableKey + ": task " + NON_EXISTING_ID + " doesn't exist"))
+      .body("message", is("Cannot get task variable %s: task %s doesn't exist".formatted(variableKey, NON_EXISTING_ID)))
       .when().get(SINGLE_TASK_SINGLE_VARIABLE_URL);
   }
 
@@ -654,8 +654,8 @@ public class TaskVariableRestResourceInteractionTest extends
       .header("accept", MediaType.APPLICATION_JSON)
       .then().expect().statusCode(Status.BAD_REQUEST.getStatusCode())
       .body("type", equalTo(InvalidRequestException.class.getSimpleName()))
-      .body("message", equalTo("Cannot put task variable " + variableKey + ": "
-          + ErrorMessageHelper.getExpectedFailingConversionMessage(variableValue, type, Integer.class)))
+      .body("message", equalTo("Cannot put task variable %s: %s".formatted(variableKey,
+          ErrorMessageHelper.getExpectedFailingConversionMessage(variableValue, type, Integer.class))))
       .when().put(SINGLE_TASK_PUT_SINGLE_VARIABLE_URL);
   }
 
@@ -726,8 +726,8 @@ public class TaskVariableRestResourceInteractionTest extends
       .header("accept", MediaType.APPLICATION_JSON)
       .then().expect().statusCode(Status.BAD_REQUEST.getStatusCode())
       .body("type", equalTo(InvalidRequestException.class.getSimpleName()))
-      .body("message", equalTo("Cannot put task variable " + variableKey + ": "
-          + ErrorMessageHelper.getExpectedFailingConversionMessage(variableValue, type, Long.class)))
+      .body("message", equalTo("Cannot put task variable %s: %s".formatted(variableKey,
+          ErrorMessageHelper.getExpectedFailingConversionMessage(variableValue, type, Long.class))))
       .when().put(SINGLE_TASK_PUT_SINGLE_VARIABLE_URL);
   }
 
@@ -762,8 +762,8 @@ public class TaskVariableRestResourceInteractionTest extends
       .header("accept", MediaType.APPLICATION_JSON)
       .then().expect().statusCode(Status.BAD_REQUEST.getStatusCode())
       .body("type", equalTo(InvalidRequestException.class.getSimpleName()))
-      .body("message", equalTo("Cannot put task variable " + variableKey + ": "
-            + ErrorMessageHelper.getExpectedFailingConversionMessage(variableValue, type, Double.class)))
+      .body("message", equalTo("Cannot put task variable %s: %s".formatted(variableKey,
+            ErrorMessageHelper.getExpectedFailingConversionMessage(variableValue, type, Double.class))))
       .when().put(SINGLE_TASK_PUT_SINGLE_VARIABLE_URL);
   }
 
@@ -820,8 +820,8 @@ public class TaskVariableRestResourceInteractionTest extends
       .header("accept", MediaType.APPLICATION_JSON)
       .then().expect().statusCode(Status.BAD_REQUEST.getStatusCode())
       .body("type", equalTo(InvalidRequestException.class.getSimpleName()))
-      .body("message", equalTo("Cannot put task variable " + variableKey + ": "
-          + ErrorMessageHelper.getExpectedFailingConversionMessage(variableValue, type, Date.class)))
+      .body("message", equalTo("Cannot put task variable %s: %s".formatted(variableKey,
+          ErrorMessageHelper.getExpectedFailingConversionMessage(variableValue, type, Date.class))))
       .when().put(SINGLE_TASK_PUT_SINGLE_VARIABLE_URL);
   }
 
@@ -838,7 +838,7 @@ public class TaskVariableRestResourceInteractionTest extends
       .header("accept", MediaType.APPLICATION_JSON)
       .then().expect().statusCode(Status.BAD_REQUEST.getStatusCode())
       .body("type", equalTo(InvalidRequestException.class.getSimpleName()))
-      .body("message", equalTo("Cannot put task variable " + variableKey + ": Unsupported value type 'X'"))
+      .body("message", equalTo("Cannot put task variable %s: Unsupported value type 'X'".formatted(variableKey)))
       .when().put(SINGLE_TASK_PUT_SINGLE_VARIABLE_URL);
   }
 
@@ -871,7 +871,7 @@ public class TaskVariableRestResourceInteractionTest extends
       .header("accept", MediaType.APPLICATION_JSON)
       .then().expect().statusCode(Status.INTERNAL_SERVER_ERROR.getStatusCode())
       .body("type", is(RestException.class.getSimpleName()))
-      .body("message", is("Cannot put task variable " + variableKey + ": Cannot find task with id " + NON_EXISTING_ID))
+      .body("message", is("Cannot put task variable %s: Cannot find task with id %s".formatted(variableKey, NON_EXISTING_ID)))
       .when().put(SINGLE_TASK_PUT_SINGLE_VARIABLE_URL);
   }
 
@@ -1220,7 +1220,7 @@ public class TaskVariableRestResourceInteractionTest extends
       .then().expect().statusCode(Status.INTERNAL_SERVER_ERROR.getStatusCode())
       .contentType(ContentType.JSON)
       .body("type", is(RestException.class.getSimpleName()))
-      .body("message", is("Cannot delete task variable " + variableKey + ": Cannot find task with id " + NON_EXISTING_ID))
+      .body("message", is("Cannot delete task variable %s: Cannot find task with id %s".formatted(variableKey, NON_EXISTING_ID)))
       .when().delete(SINGLE_TASK_DELETE_SINGLE_VARIABLE_URL);
   }
 
