@@ -17,7 +17,8 @@
 package org.operaton.bpm.engine.impl.util.xml;
 
 import java.io.InputStream;
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -34,7 +35,7 @@ import org.operaton.bpm.engine.impl.util.io.InputStreamSource;
 import org.operaton.bpm.engine.impl.util.io.ResourceStreamSource;
 import org.operaton.bpm.engine.impl.util.io.StreamSource;
 import org.operaton.bpm.engine.impl.util.io.StringStreamSource;
-import org.operaton.bpm.engine.impl.util.io.UrlStreamSource;
+import org.operaton.bpm.engine.impl.util.io.UriStreamSource;
 import org.operaton.bpm.engine.impl.xml.ProblemImpl;
 
 
@@ -87,15 +88,23 @@ public abstract class Parse extends DefaultHandler {
     if (name==null) {
       name(url.toString());
     }
-    setStreamSource(new UrlStreamSource(url));
+    setStreamSource(new UriStreamSource(url));
+    return this;
+  }
+
+  public Parse sourceUri(URI uri) {
+    if (name==null) {
+      name(uri.toString());
+    }
+    setStreamSource(new UriStreamSource(uri));
     return this;
   }
 
   public Parse sourceUrl(String url) {
     try {
-      return sourceUrl(new URL(url));
-    } catch (MalformedURLException e) {
-      throw LOG.malformedUrlException(url, e);
+      return sourceUri(new URI(url));
+    } catch (URISyntaxException e) {
+      throw LOG.malformedUriException(url, e);
     }
   }
 
@@ -134,12 +143,7 @@ public abstract class Parse extends DefaultHandler {
       InputStream inputStream = streamSource.getInputStream();
 
       SAXParser saxParser = parser.getSaxParser();
-      try {
-        saxParser.setProperty(JAXP_ACCESS_EXTERNAL_SCHEMA, resolveAccessExternalSchemaProperty());
-      } catch (Exception e) {
-        // ignore unavailable option
-        LOG.logAccessExternalSchemaNotSupported(e);
-      }
+      trySetAccessExternalSchema(saxParser);
       if (schemaResource != null) {
         saxParser.setProperty(JAXP_SCHEMA_LANGUAGE, W3C_XML_SCHEMA);
         saxParser.setProperty(JAXP_SCHEMA_SOURCE, schemaResource);
@@ -150,6 +154,15 @@ public abstract class Parse extends DefaultHandler {
     }
 
     return this;
+  }
+
+  private void trySetAccessExternalSchema(SAXParser saxParser) {
+    try {
+      saxParser.setProperty(JAXP_ACCESS_EXTERNAL_SCHEMA, resolveAccessExternalSchemaProperty());
+    } catch (Exception e) {
+      // ignore unavailable option
+      LOG.logAccessExternalSchemaNotSupported(e);
+    }
   }
 
   /*
@@ -223,7 +236,7 @@ public abstract class Parse extends DefaultHandler {
       builder.append("\n* ");
       builder.append(warning.getMessage());
       builder.append(" | resource ").append(name);
-      builder.append(warning.toString());
+      builder.append(warning);
     }
     LOG.logParseWarnings(builder.toString());
   }
@@ -234,7 +247,7 @@ public abstract class Parse extends DefaultHandler {
       strb.append("\n* ");
       strb.append(error.getMessage());
       strb.append(" | resource ").append(name);
-      strb.append(error.toString());
+      strb.append(error);
     }
     throw LOG.exceptionDuringParsing(strb.toString(), name, errors, warnings);
   }
