@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.engine.test.api.authorization.task.updatevariable;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -282,7 +281,7 @@ public class ProcessTaskAuthorizationTest {
       .bindResource("taskId", taskId)
       .start();
 
-    taskService.removeVariables(taskId, Arrays.asList(VARIABLE_NAME));
+    taskService.removeVariables(taskId, List.of(VARIABLE_NAME));
 
     // then
     if (authRule.assertScenario(scenario)) {
@@ -306,7 +305,7 @@ public class ProcessTaskAuthorizationTest {
       .bindResource("taskId", taskId)
       .start();
 
-    taskService.removeVariablesLocal(taskId, Arrays.asList(VARIABLE_NAME));
+    taskService.removeVariablesLocal(taskId, List.of(VARIABLE_NAME));
 
     // then
     if (authRule.assertScenario(scenario)) {
@@ -351,7 +350,7 @@ public class ProcessTaskAuthorizationTest {
         .bindResource("taskId", taskId)
         .start();
 
-    ((TaskServiceImpl) taskService).updateVariables(taskId, null, Arrays.asList(VARIABLE_NAME));
+    ((TaskServiceImpl) taskService).updateVariables(taskId, null, List.of(VARIABLE_NAME));
 
     // then
     if (authRule.assertScenario(scenario)) {
@@ -373,7 +372,7 @@ public class ProcessTaskAuthorizationTest {
         .bindResource("taskId", taskId)
         .start();
 
-    ((TaskServiceImpl) taskService).updateVariables(taskId, getVariables(), Arrays.asList(VARIABLE_NAME));
+    ((TaskServiceImpl) taskService).updateVariables(taskId, getVariables(), List.of(VARIABLE_NAME));
 
     // then
     if (authRule.assertScenario(scenario)) {
@@ -418,7 +417,7 @@ public class ProcessTaskAuthorizationTest {
         .bindResource("taskId", taskId)
         .start();
 
-    ((TaskServiceImpl) taskService).updateVariablesLocal(taskId, null, Arrays.asList(VARIABLE_NAME));
+    ((TaskServiceImpl) taskService).updateVariablesLocal(taskId, null, List.of(VARIABLE_NAME));
 
     // then
     if (authRule.assertScenario(scenario)) {
@@ -440,7 +439,7 @@ public class ProcessTaskAuthorizationTest {
         .bindResource("taskId", taskId)
         .start();
 
-    ((TaskServiceImpl) taskService).updateVariablesLocal(taskId, getVariables(), Arrays.asList(VARIABLE_NAME));
+    ((TaskServiceImpl) taskService).updateVariablesLocal(taskId, getVariables(), List.of(VARIABLE_NAME));
 
     // then
     if (authRule.assertScenario(scenario)) {
