@@ -204,15 +204,9 @@ class IdentityServiceTest {
 
     User secondUser = identityService.newUser("testuser");
 
-    try {
-      identityService.saveUser(secondUser);
-      fail("BadUserRequestException is expected");
-    } catch (Exception ex) {
-      if (!(ex instanceof BadUserRequestException)) {
-        fail("BadUserRequestException is expected, but another exception was received:  " + ex);
-      }
-      assertThat(ex.getMessage()).isEqualTo("The user already exists");
-    }
+    assertThatThrownBy(() -> identityService.saveUser(secondUser))
+      .isInstanceOf(BadUserRequestException.class)
+      .hasMessage("The user already exists");
   }
 
   @Test
@@ -281,15 +275,9 @@ class IdentityServiceTest {
 
     Group secondGroup = identityService.newGroup("greatGroup");
 
-    try {
-      identityService.saveGroup(secondGroup);
-      fail("BadUserRequestException is expected");
-    } catch (Exception ex) {
-      if (!(ex instanceof BadUserRequestException)) {
-        fail("BadUserRequestException is expected, but another exception was received:  " + ex);
-      }
-      assertThat(ex.getMessage()).isEqualTo("The group already exists");
-    }
+    assertThatThrownBy(() -> identityService.saveGroup(secondGroup))
+      .isInstanceOf(BadUserRequestException.class)
+      .hasMessage("The group already exists");
   }
 
   @Test
@@ -666,7 +654,7 @@ class IdentityServiceTest {
 
   @Test
   void testSetAuthenticatedUserAndGroups() {
-    List<String> groups = Arrays.asList("sales", "development");
+    List<String> groups = List.of("sales", "development");
 
     identityService.setAuthentication("john", groups);
 
@@ -680,8 +668,8 @@ class IdentityServiceTest {
 
   @Test
   void testSetAuthenticatedUserGroupsAndTenants() {
-    List<String> groups = Arrays.asList("sales", "development");
-    List<String> tenants = Arrays.asList("tenant1", "tenant2");
+    List<String> groups = List.of("sales", "development");
+    List<String> tenants = List.of("tenant1", "tenant2");
 
     identityService.setAuthentication("john", groups, tenants);
 
@@ -707,7 +695,7 @@ class IdentityServiceTest {
 
   @Test
   @WatchLogger(loggerNames = {IDENTITY_LOGGER}, level = "INFO")
-  void testUnsuccessfulAttemptsResultInBlockedUser() throws Exception {
+  void testUnsuccessfulAttemptsResultInBlockedUser() {
     // given
     User user = identityService.newUser("johndoe");
     user.setPassword("xxx");
