@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.engine.test.api.runtime.migration;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.junit.jupiter.api.TestTemplate;
 import org.junit.jupiter.api.extension.RegisterExtension;
@@ -65,7 +64,7 @@ public class MigrationBoundaryEventsParameterizedTest {
 
   @Parameters
   public static Collection<Object[]> data() {
-      return Arrays.asList(new Object[][] {
+      return List.of(new Object[][] {
                new Object[]{ new TimerEventFactory() },
                new Object[]{ new MessageEventFactory() },
                new Object[]{ new SignalEventFactory() },
