@@ -16,7 +16,6 @@
  */
 package org.operaton.bpm.engine.test.jobexecutor;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
@@ -28,6 +27,7 @@ import org.junit.jupiter.api.TestTemplate;
 import org.junit.jupiter.api.extension.RegisterExtension;
 
 import org.operaton.bpm.engine.OptimisticLockingException;
+import org.operaton.bpm.engine.ProcessEngineException;
 import org.operaton.bpm.engine.RuntimeService;
 import org.operaton.bpm.engine.impl.cfg.ProcessEngineConfigurationImpl;
 import org.operaton.bpm.engine.impl.cmd.DefaultJobRetryCmd;
@@ -75,7 +75,7 @@ public class FailedJobListenerWithRetriesTest {
 
   @Parameters
   public static Collection<Object[]> scenarios() {
-    return Arrays.asList(new Object[][] {
+    return List.of(new Object[][] {
         { 4, 0, false },
         //all retries are depleted without success -> the job is still locked
         { 5, 1, true }
@@ -94,7 +94,8 @@ public class FailedJobListenerWithRetriesTest {
       try {
         lockTheJob(job.getId());
         engineRule.getManagementService().executeJob(job.getId());
-      } catch (Exception ex) {
+      } catch (ProcessEngineException ignored) {
+        // expected exception
       }
       job = getJob();
     }
