@@ -109,7 +109,7 @@ public class DatabaseNamingConsistencyTest {
 
     // then
     assertThat(errors)
-      .containsAll(Arrays.asList(testStringsIncorrect))
-      .doesNotContainAnyElementsOf(Arrays.asList(testStringsCorrect));
+      .containsAll(List.of(testStringsIncorrect))
+      .doesNotContainAnyElementsOf(List.of(testStringsCorrect));
   }
 }
