@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.bpmn.instance;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.operaton.bpm.model.bpmn.AssociationDirection;
 
@@ -38,7 +37,7 @@ public class AssociationTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new AttributeAssumption("sourceRef", false, true),
       new AttributeAssumption("targetRef", false, true),
       new AttributeAssumption("associationDirection", false, false, AssociationDirection.None)
