@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.bpmn.instance;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.operaton.bpm.model.bpmn.impl.instance.MessageFlowRef;
 import org.operaton.bpm.model.bpmn.impl.instance.ParticipantRef;
@@ -34,7 +33,7 @@ public class ConversationNodeTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new ChildElementAssumption(ParticipantRef.class),
       new ChildElementAssumption(MessageFlowRef.class),
       new ChildElementAssumption(CorrelationKey.class)
@@ -43,7 +42,7 @@ public class ConversationNodeTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new AttributeAssumption("name")
     );
   }
