@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.bpmn.instance;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -30,7 +29,7 @@ class EventBasedGatewayTest extends AbstractGatewayTest<EventBasedGateway> {
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new AttributeAssumption("instantiate", false, false, false),
       new AttributeAssumption("eventGatewayType", false, false, EventBasedGatewayType.Exclusive)
     );
