@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.spin.spi;
-
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.ServiceLoader;
 
 import org.junit.jupiter.api.AfterEach;
@@ -143,10 +142,10 @@ class DataFormatLoadingTest {
   }
 
   protected void mockProviders(final DataFormatProvider... providers) {
-    when(mockServiceLoader.iterator()).thenAnswer(invocation -> Arrays.asList(providers).iterator());
+    when(mockServiceLoader.iterator()).thenAnswer(invocation -> List.of(providers).iterator());
   }
 
   protected void mockConfigurators(final DataFormatConfigurator<?>... configurators) {
-    when(mockConfiguratorLoader.iterator()).thenAnswer(invocation -> Arrays.asList(configurators).iterator());
+    when(mockConfiguratorLoader.iterator()).thenAnswer(invocation -> List.of(configurators).iterator());
   }
 }
