@@ -15,11 +15,10 @@
  * limitations under the License.
  */
 package org.operaton.bpm.webapp.plugin.resource;
-
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import jakarta.servlet.ServletContext;
 import jakarta.ws.rs.core.HttpHeaders;
 import jakarta.ws.rs.core.Response;
@@ -70,7 +69,7 @@ public class AbstractAppPluginRootResourceTest {
 
   @Parameters
   public static Collection<Object[]> getAssets() {
-    return Arrays.asList(new Object[][]{
+    return List.of(new Object[][]{
         {"app/plugin.js", MIME_TYPE_TEXT_JAVASCRIPT, true},
         {"app/plugin.css", MIME_TYPE_TEXT_CSS, true},
         {"app/asset.js", MIME_TYPE_TEXT_JAVASCRIPT, true},
@@ -138,7 +137,7 @@ public class AbstractAppPluginRootResourceTest {
       } else {
         assertThat(e)
                 .isInstanceOf(RestException.class)
-                .hasMessage("Not allowed to load the following file '" + assetName + "'.");
+                .hasMessage("Not allowed to load the following file '%s'.".formatted(assetName));
 
         Mockito.verify(runtimeDelegate, Mockito.never()).getAppPluginRegistry();
         Mockito.verify(pluginRegistry, Mockito.never()).getPlugin(PLUGIN_NAME);
